<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="16dp"
        android:text="@string/activity_main_text_1"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- boton 1 mostrar perfiles -->

    <TextView
        android:id="@+id/textViewByJonny"
        android:layout_width="117dp"
        android:layout_height="36dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:text="@string/by_jonny_a_v"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonShowProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/apretame"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_launcher_foreground"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewResult"
        app:rippleColor="@color/colorAccent"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <!--  botón 2 de calcular resultado -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/calcular"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_launcher_foreground"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonShowProfile"
        app:rippleColor="@color/colorAccent"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAuction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/auction_result"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_launcher_foreground"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonCalculate"
        app:rippleColor="@color/colorAccent"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
